--- a/src/app/components/cards-loan/cards-loan.component.html
+++ b/src/app/components/cards-loan/cards-loan.component.html
@@ -2,10 +2,10 @@
   <ion-slide class="ion-slide" *ngFor="let item of prestamos; let i=index" >
     <ion-card  (click)="onAccounts(i)" class="cards ion-padding" [ngStyle]="i%2==0 ? {'background': 'url(' + img.one +')'}: {'background': 'url(' + img.two +')'}" >
       <ion-label>
-        <h2 class="ion-text-right"><strong>0000012365</strong></h2>
+        <h2 class="ion-text-right"><strong>{{item.prestamo_account_no}}</strong></h2>
         <ion-label>
           <h3 class="ion-text-left">SALDO TOTAL</h3>
-          <p class="ion-text-left">{{item.saldo_total | currency}}</p>
+          <p class="ion-text-left">{{item.saldo_total == null ? 0 : item.saldo_total | currency}}</p>
           <h3 class="ion-text-left">SALDO PARA NO GENERAR INTERESES</h3>
           <p class="ion-text-left">{{item.monto_proximo_pago | currency}}</p>
           <h3 class="ion-text-left">FECHA LÍMITE PAGO &nbsp;&nbsp;&nbsp;&nbsp; <ion-label class="date-limit">{{item.fecha_proximo_pago | date: 'EEEE, dd/MM/yyyy'}}</ion-label></h3>
