vista de movimientos con datos reales

--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -50,3 +50,8 @@
     </ion-card-content>
   </ion-card>
 </div>
+LOL:{{data}}
+<div *ngIf="data == ''">
+  <ion-label class="card-empty center-label">NO CUENTA CON MOVIMIENTOS</ion-label>
+  <ion-label class="card-empty center-label"></ion-label>
+</div>
