--- a/src/app/components/payment-cards/payment-cards.component.scss
+++ b/src/app/components/payment-cards/payment-cards.component.scss
@@ -38,7 +38,10 @@
     color:#00ABFF;
     font-size: 14px;
 }
-
+.card-empty{
+    color:#0652AF;
+    font-size: 24px !important;
+}
 
 /*@media(max-width: 1024px){
     .payment-cards{
