--- a/src/app/pages/movements/movements.page.scss
+++ b/src/app/pages/movements/movements.page.scss
@@ -1,6 +1,5 @@
 .card-info{
-    //--background: #043C80;
-    --background: url('/assets/img/cards/Tarjeta01_1.svg');
+    --background: transparent;
     --color:white;
     --min-height:50px;
     margin-bottom: 6%;
