implementacion de storage ionic en login

--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -50,7 +50,7 @@
     </ion-card-content>
   </ion-card>
 </div>
-<div *ngIf="vacio" style="margin-top: 5%;">
+<div *ngIf="data==''" style="margin-top: 5%;">
   <ion-label class="card-empty center-label">NO CUENTA CON MOVIMIENTOS</ion-label>
   <ion-label class="card-empty center-label"></ion-label>
 </div>
