--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -1,4 +1,21 @@
-<div class="scroll">
+<div *ngIf="data!=''" class="scroll">
+  <div *ngIf="data==''" style="margin-top: 5%;">
+    <ion-label class="card-empty center-label">NO CUENTA CON MOVIMIENTOS</ion-label>
+    
+    <ion-card class="payment-cards payment-cards-blue">
+      <ion-card-content class="ion-no-padding">
+        <ion-item style="--background:#F7F7F7;" lines="none" class="ion-no-padding">
+          <img class="img-credit-card" slot="start" src="../../../assets/img/credit-card.jpg">
+          <ion-label class="ion-no-padding">
+            <span class="title-empty-card">¿Necesitas dinero?</span><br>
+            <span class="body-empty-card">Obtén un prestamo</span><br><br>
+            <span style="color:#0652AF" class="price-empty-card">Hasta $80,000.00</span>
+          </ion-label>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+  </div>
   <div style="height: auto;" *ngFor="let l of data">
     <ion-card *ngIf='l.tipo=="LOANREP"' class="payment-cards payment-cards-blue">
       <ion-card-content class="ion-no-padding">
@@ -10,8 +27,8 @@
             <span class="body-card">{{l.mensaje}}</span>
           </label>
           <label slot="end">
-            <span class="price-card" style="color:#0652AF">$ {{l.importe}}</span><br>
-            <span class="date-card">{{l.fecha_mov}}</span>
+            <span class="price-card" style="color:#0652AF">{{l.importe | currency}}</span><br>
+            <span class="date-card">{{l.fecha_mov | date: 'dd/MM/yyyy'}}</span>
           </label>
         </ion-item>
       </ion-card-content>
@@ -27,8 +44,8 @@
             <span class="body-card">{{l.mensaje}}</span>
           </label>
           <label slot="end">
-            <span class="price-card" style="color:#DBD460">$ {{l.importe}}</span><br>
-            <span class="date-card">{{l.fecha_mov}}</span>
+            <span class="price-card" style="color:#DBD460">{{l.importe | currency}}</span><br>
+            <span class="date-card">{{l.fecha_mov | date: 'dd/MM/yyyy'}}</span>
           </label>
         </ion-item>
       </ion-card-content>
@@ -44,8 +61,8 @@
             <span class="body-card">{{l.mensaje}}</span>
           </label>
           <label slot="end">
-            <span class="price-card" style="color:#189746">$ {{l.importe}}</span><br>
-            <span class="date-card">{{l.fecha_mov}}</span>
+            <span class="price-card" style="color:#189746">{{l.importe | currency}}</span><br>
+            <span class="date-card">{{l.fecha_mov | date: 'dd/MM/yyyy'}}</span>
           </label>
         </ion-item>
       </ion-card-content>
@@ -53,20 +70,3 @@
   </div>
 </div>
 
-<div *ngIf="data==''" style="margin-top: 5%;">
-  <ion-label class="card-empty center-label">NO CUENTA CON MOVIMIENTOS</ion-label>
-  
-  <ion-card class="payment-cards payment-cards-blue">
-    <ion-card-content class="ion-no-padding">
-      <ion-item style="--background:#F7F7F7;" lines="none" class="ion-no-padding">
-        <img class="img-credit-card" slot="start" src="../../../assets/img/credit-card.jpg">
-        <ion-label class="ion-no-padding">
-          <span class="title-empty-card">¿Necesitas dinero?</span><br>
-          <span class="body-empty-card">Obtén un prestamo</span><br><br>
-          <span style="color:#0652AF" class="price-empty-card">Hasta $80,000.00</span>
-        </ion-label>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
-
-</div>
