--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,24 @@
 <ion-app>
   <ion-menu side="start" menuId="first" contentId="main">
-    <ion-header id="imagen" class="ion-no-border ion-padding">
-      <ion-toolbar class="ion-padding"  id="color-background">
-        <ion-avatar>
-          <img src="{{ avatarUrl.getavatar()}}">
-        </ion-avatar>
-      </ion-toolbar>
-      <ion-item lines="none" class="item-name">
-        <ion-label><strong>{{avatarUrl.getClient()}}</strong></ion-label>
-      </ion-item>
-    
+    <ion-header class="ion-no-border">
+      <div style="position: absolute;">
+        <img class="img" src="/assets/img/img-menu.jpg">
+      </div>
+      <div style="position: absolute;">
+        <ion-toolbar class="ion-padding"  id="color-background">
+          <ion-avatar>
+            <img src="{{ avatarUrl.getavatar()}}">
+          </ion-avatar>
+        </ion-toolbar>
+        <ion-item lines="none" class="item-name">
+          <ion-label>{{avatarUrl.getClient()}}</ion-label>
+        </ion-item>
+      </div>
     </ion-header>
-    <ion-content>
+    <ion-content scroll="false">
       <div class="spacing ion-padding">
         <ion-menu-toggle *ngFor="let pages of navigate">
-          <ion-item class="ion-item" [routerLink]="pages.url" lines="none">
+          <ion-item class="ion-item" button (click)="onMenuUrl(pages.url)" lines="none">
             <ion-icon [name]="pages.icon"></ion-icon>
             <ion-label>
               {{pages.title}} 
