--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,8 @@ ion-content, ion-list, ion-item, ion-footer,ion-menu,ion-icon{
     // box-shadow: 100px!important;
 }
 .spacing{
-    margin-top: 3rem!important;
+    margin-top: 70%!important;
+    position: fixed;
 }
 ion-list{
  margin-top: -18px!important;
@@ -46,18 +47,26 @@ div{
     height: 100%;
 }
 
-#imagen{
+.img{
     //background-image:url("../../../assets/img/bg-header-login.jpg"bg-header-login.jpg") no-repeat !important;
-    background: url("/assets/img/img-menu.jpg") no-repeat !important;
-    height: 22%;
+   // background: url("/assets/img/img-menu.jpg") no-repeat !important;
+    opacity: .5;
     width: 100%;
+    height: 170px!important;
+    //width: 100%;
+   // position: relative;
 
   }
-
+  #avatar{
+      margin-top: -50px!important;
+      background-color: transparent;
+      background-color: none;
+  }
   ion-avatar{
       width: 4rem;
       height: 4rem;
       margin-top: 1.5rem!important;
       margin-left: -16px!important;
   }
+
 
