Modulo de REferencias de Pago Codigos de Barra, y Datos de Prestamos

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,3 +2,6 @@ ion-header.background{
     --ion-toolbar-background: #043C80;
     border-bottom-width: 0;
 }
+ion-toolbar{
+    --background: #043C80!important;
+}
