--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<ion-header class="background ion-no-border" [translucent]="true">
+<ion-header mode="md" class="background ion-no-border" [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button style="position: absolute; color:white" defaultHref="Login"></ion-back-button>
+      <ion-back-button style="position: absolute; color:white" defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-grid>
       <ion-row>
