--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -2,7 +2,7 @@
 
 <ion-content>
   <ion-toolbar> 
-    <ion-segment class="segment-nav" (ionChange)="segmentChanged($event)" [(ngModel)]="segment"> 
+    <ion-segment mode="md" class="segment-nav" (ionChange)="segmentChanged($event)" [(ngModel)]="segment"> 
       <ion-segment-button value="creditos"> 
         <ion-label>{{'CREDIT' | translate}}</ion-label>
       </ion-segment-button> 
@@ -32,12 +32,12 @@
     <ion-label>{{'PCALENDAR' | translate}}</ion-label>
     <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
-  <ion-item class="btn-round item-nav" routerLink="/register" disabled>
+  <ion-item class="btn-round item-nav" routerLink="/references">
     <ion-icon style="color:white; margin-right: 10px;" slot="start" name="qr-code"></ion-icon>
     <ion-label>{{'BQRO' | translate}}</ion-label>
     <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
-  <ion-item class="btn-round item-nav" routerLink="/register" disabled>
+  <ion-item class="btn-round item-nav" routerLink="/loandata">
     <ion-icon style="color:white; margin-right: 10px;" slot="start" name="document-text"></ion-icon>
     <ion-label>{{'LOANDATA' | translate}}</ion-label>
     <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
