--- a/src/app/pages/movements/movements.page.html
+++ b/src/app/pages/movements/movements.page.html
@@ -25,10 +25,10 @@
     
           <ion-row class="data-count">
             <ion-col class="center-label" size="6">
-              {{prestamo.saldo_total}}
+              {{prestamo.saldo_total | currency}}
             </ion-col>
             <ion-col class="center-label" size="6">
-              {{prestamo.monto_proximo_pago}}
+              {{prestamo.monto_proximo_pago | currency}}
             </ion-col>
           </ion-row>
     
