Correccion de avatar y targeta de cards

--- a/src/app/components/cards-loan/cards-loan.component.scss
+++ b/src/app/components/cards-loan/cards-loan.component.scss
@@ -3,11 +3,12 @@
 }
 
 .cards{
-  width: 18.69rem;
-  height: 8.3rem;
+  width: 19.60rem;
+  height: 8.71rem;
 }
 .ion-slide{
   margin-bottom: 27px!important;
+  background-repeat: repeat;
 }
 
 .ion-slides{
@@ -15,12 +16,12 @@
   --bullet-background-active:#FFFF;
 }
 .date-limit{
-  font-size: .88rem!important;
+  font-size: .87rem!important;
   text-transform: uppercase;
 }
 h2{
   font-size: 1rem;
-  margin-top: -5px;
+  margin-top: -9px;
   margin-bottom: -8px;
   margin-right: 5px;
 }
