--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -100,7 +100,7 @@
   <ion-header class="ion-no-border">
     <ion-toolbar class="toolbar-padding" id="ion-toolbar">
       <ion-avatar id="ion-avatar" button (click)="menuSalir()">
-        <img src="{{ urlAvatar }}">
+        <ion-img [src]="urlAvatar"></ion-img>  
       </ion-avatar>
     </ion-toolbar>
 </ion-header>
