adaptacion de pantallas

--- a/src/app/components/modals/payment/payment.component.html
+++ b/src/app/components/modals/payment/payment.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div *ngIf="payment.pagado && payment.periodo != nextP.periodo">
     <div>
-      <ion-icon class="positionAvata" name="checkmark-outline"></ion-icon> 
+      <ion-icon class="iconPosition" name="checkmark-outline"></ion-icon> 
     </div>
     <ion-grid class="padding-modal">
       <ion-row>
