--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,17 +3,8 @@
     <ion-buttons slot="start">
       <ion-back-button style="position: absolute; color:white" defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-grid>
-      <ion-row>
-        <ion-col></ion-col>
-        <ion-col>
-          <ion-label class="center-label">
-            <ion-title style="color:white" text-capitalize>{{titulo}}</ion-title>
-          </ion-label>
-          
-        </ion-col>
-        <ion-col></ion-col>
-      </ion-row>
-    </ion-grid>
+    <ion-label style="display: grid;justify-content: center;">
+      <ion-title style="color:white" text-capitalize>{{titulo}}</ion-title>
+    </ion-label>
   </ion-toolbar>
 </ion-header>
