--- a/src/app/components/payment-cards/payment-cards.component.scss
+++ b/src/app/components/payment-cards/payment-cards.component.scss
@@ -67,29 +67,41 @@
     font-size: 20px;
 }
 
-/*@media(max-width: 1024px){
-    .payment-cards{
-        height: 110px;
-    }
+@media (min-width:1023px) and (max-width:1024px){
     .icon-card{
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 50px;
     }
     
     .title-card{
         //color:red;
-        font-size: 19px;
+        font-size: 25px;
     }
     
     .body-card{
-        font-size: 20px;
-    }
-    
-    .price-card{
         font-size: 26px;
     }
     
-    .date-card{
-        font-size: 20px;
+    .price-card{
+        font-size: 32px;
     }
-}*/
+    
+    .date-card{
+        font-size: 26px;
+    }
+    .card-empty{
+        font-size: 32px !important;
+    }
+    .title-empty-card{
+        font-size: 29px;
+    }
+    .body-empty-card{
+        font-size: 28px;
+    }
+    .price-empty-card{
+        font-size: 29px;
+    }
+    .payment-cards{
+        min-height: 120px;
+    }
+}
