--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -22,24 +22,24 @@
   </ion-slides--> 
 
 
-  <ion-item class="btn-round item-nav" [routerLink]="['/movements/',idDetatail]" [disabled]="prestamos==''">
-    <ion-icon style="color:white; margin-right: 10px;" slot="start" name="search"></ion-icon>
-    <ion-label style="padding-left: 0px;">{{'MOVEMENTS' | translate}}</ion-label>
-    <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
+  <ion-item mode="md" class="btn-round item-nav" [routerLink]="['/movements/',idDetatail]" [disabled]="prestamos==''">
+    <ion-icon class="IconNav" style="margin-right: 10px;" slot="start" name="search"></ion-icon>
+    <ion-label class="labelNav">{{'MOVEMENTS' | translate}}</ion-label>
+    <ion-icon class="IconNav" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
-  <ion-item class="btn-round item-nav" [routerLink]="['/calendar/',accountNumber]">
-    <ion-icon style="color:white; margin-right: 10px;" slot="start" name="calendar"></ion-icon>
-    <ion-label>{{'PCALENDAR' | translate}}</ion-label>
-    <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
+  <ion-item mode="md" class="btn-round item-nav" [routerLink]="['/calendar/',accountNumber]" [disabled]="prestamos==''">
+    <ion-icon class="IconNav" style="margin-right: 10px;" slot="start" name="calendar"></ion-icon>
+    <ion-label class="labelNav">{{'PCALENDAR' | translate}}</ion-label>
+    <ion-icon class="IconNav" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
-  <ion-item class="btn-round item-nav" routerLink="/references">
-    <ion-icon style="color:white; margin-right: 10px;" slot="start" name="qr-code"></ion-icon>
-    <ion-label>{{'BQRO' | translate}}</ion-label>
-    <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
+  <ion-item mode="md" class="btn-round item-nav" routerLink="/references">
+    <ion-icon class="IconNav" style="margin-right: 10px;" slot="start" name="qr-code"></ion-icon>
+    <ion-label class="labelNav">{{'BQRO' | translate}}</ion-label>
+    <ion-icon class="IconNav" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
-  <ion-item class="btn-round item-nav" routerLink="/loandata">
-    <ion-icon style="color:white; margin-right: 10px;" slot="start" name="document-text"></ion-icon>
-    <ion-label>{{'LOANDATA' | translate}}</ion-label>
-    <ion-icon style="color:white" slot="end" name="chevron-forward"></ion-icon>
+  <ion-item mode="md" class="btn-round item-nav" routerLink="/loandata">
+    <ion-icon class="IconNav" style="margin-right: 10px;" slot="start" name="document-text"></ion-icon>
+    <ion-label class="labelNav">{{'LOANDATA' | translate}}</ion-label>
+    <ion-icon class="IconNav" slot="end" name="chevron-forward"></ion-icon>
   </ion-item>
 </ion-content>
