--- a/src/app/pages/movements/movements.page.scss
+++ b/src/app/pages/movements/movements.page.scss
@@ -4,6 +4,11 @@
     --min-height:50px;
     margin-bottom: 6%;
     width: 100%;
+    background-repeat: no-repeat;
+    width: 26rem;
+    height: 12rem;
+    display: flex;
+    align-items: center;
 }
 
 .pagination{
@@ -13,14 +18,19 @@
 
 .font-ligh{
     font-weight:lighter;
-    font-size: 10px;
-    padding: 0;
+    font-size: 14px;
+    padding: 2% 0 0 0;
 }
 
 .number-count{
-    font-size: 17px;
+    font-size: 20px;
+    padding: 3% 0 0 0;
 }
-
+.date-label{
+    padding: 3% 0 0 0;
+    font-size: 15px;
+    text-transform: uppercase;
+}
 .payment-cards{
     border-left: 8px solid;
     --background:#F7F7F7;
@@ -33,18 +43,24 @@
     height: 33px;
     width: 33px;
 }
-
-/*@media(max-width: 1024px){
+.size-scroll{
+    height: 70%;
+}
+@media (min-width:1023px) and (max-width:1024px){
     .card-info{
-        --min-height:150px;
+        width: 55rem;
+        height: 25rem;
     }
     .font-ligh{
-        font-size: 16px;
+        font-size: 33px;
     }
     .number-count{
-        font-size: 22px;
+        font-size: 40px;
     }
-    .data-count{
-        font-size: 21px;
+    .size-scroll{
+        height: 60%;
     }
-}*/
+    .date-label{
+        font-size: 34px;
+    }
+}
