Cambios de saldo total y background en eskeleton

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
       </ion-toolbar>
   </ion-header>
   
-       <div style="height: 40%;">
+       <div style="height: 40%;background-color: #FFFF;">
 
         <ion-slides  pager mode="md" #slides>
           <ion-slide *ngFor="let item of [1,1]" class="slide-skeleton">
@@ -41,10 +41,10 @@
         </ion-slides>
        </div>
 
-       <div class="secction-button-skeleton ion-padding" style="margin-top: -130px;">
-        <ion-grid>
+       <div class="secction-button-skeleton ion-padding" style="margin-top: -130px;background-color: #FFFF;">
+        <ion-grid style="background-color: #FFFF;">
           <ion-row>
-            <ion-col>
+            <ion-col style="background-color: #FFFF;">
               <ion-card style="width: 80px;height: 80px;">
                 <ion-label class="padding-skeleton">
                   <ion-skeleton-text animated style="width: 30px; height: 30px;margin-left: 1.5rem;margin-right: 1.5rem;"></ion-skeleton-text>
@@ -52,7 +52,7 @@
                 </ion-label>
               </ion-card>
             </ion-col>
-            <ion-col>
+            <ion-col style="background-color: #FFFF;">
               <ion-card style="width: 80px;height: 80px;">
                 <ion-label class="padding-skeleton">
                   <ion-skeleton-text animated style="width: 30px; height: 30px;margin-left: 1.5rem;margin-right: 1.5rem;"></ion-skeleton-text>
@@ -64,7 +64,7 @@
         </ion-grid>
        </div>
 
-       <div>
+       <div style="background-color: #FFFF;">
         <ion-card *ngFor="let i of [1,2,3,4,5]">
           <ion-card-content class="ion-no-padding">
             <ion-item style="--background:#F7F7F7;" lines="none">
