--- a/src/app/components/establishments/establishments.component.html
+++ b/src/app/components/establishments/establishments.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="font-size:x-small;color:#FFFF">Tiendas Participantes: </ion-title>
+    <ion-title style="font-size:large;color:#FFFF">Tiendas Participantes: </ion-title>
   </ion-toolbar>
 </ion-header>
   
