--- a/src/app/pages/loandata/loandata.page.html
+++ b/src/app/pages/loandata/loandata.page.html
@@ -26,7 +26,7 @@
        <ion-row>
          <ion-col size="3">
           <ion-card-header>
-            <ion-card-title class="credit" style="font-size: small;">Crédito {{item.prestamo_id}}</ion-card-title>
+            <ion-card-title class="credit" style="font-size: x-small;">Crédito {{item.prestamo_id}}</ion-card-title>
            </ion-card-header>
          </ion-col>
          <ion-col size="6">
