--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data!=''" class="scroll">
+<div class="scroll">
   <div *ngIf="data==''" style="margin-top: 5%;">
     <ion-label class="card-empty center-label">NO CUENTA CON MOVIMIENTOS</ion-label>
     
