--- a/src/app/pages/payment-list/payment-list.page.scss
+++ b/src/app/pages/payment-list/payment-list.page.scss
@@ -46,7 +46,10 @@
     background: #B1C800;
     padding: 0;
 }
-
+.red-card{
+    background: #EB3E41;;
+    padding: 0;
+}
 .border-blue-card{
     padding: 0;
     border: solid #00A8AE;
