--- a/src/global.scss
+++ b/src/global.scss
@@ -183,8 +183,9 @@ calendar{
 
 
 .size-modal{
-    --height:46%;
+    --height:45%;
     align-items: flex-end;
+    --background: transparent;
 }
 
 .first-col{
