--- a/src/app/pages/calendar/calendar.page.scss
+++ b/src/app/pages/calendar/calendar.page.scss
@@ -47,7 +47,10 @@
 
 .card-calendar{
     background-repeat: no-repeat !important;
-    background-size: cover !important;
+    //background-size: cover !important;
+    width: 23.5rem;
+    height: 11.45rem;
+    margin: auto;
 }
 
 ion-header.background{
