--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -35,7 +35,7 @@
     <ion-label class="center-label" >{{'ACCESSAPP' | translate}}</ion-label>
     <ion-button class="btn-round btn-info" routerLink="/register" expand="block">{{'SIGNIN' | translate}}</ion-button>
     <br>
-    <ion-label class="center-label" >{{'FPASSWORD' | translate}}</ion-label>
+    <ion-label class="center-label" routerLink="/reset-password" >{{'FPASSWORD' | translate}}</ion-label>
     <br>
   </ion-card>
 </ion-content>
