--- a/src/global.scss
+++ b/src/global.scss
@@ -191,3 +191,9 @@ calendar{
 .first-col{
     text-align: center;   
 }
+
+.center-modal{
+    --height: 55%;
+    --width: 90%;
+    align-items: center;
+}
